<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="example.com.powerinterview.activities.LoginActivity"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true" android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="44sp"
            app:bootstrapBrand="secondary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean"
            tools:text="@string/app_name" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:bootstrapSize="xl"
            android:id="@+id/emailEditText"
            android:hint="@string/prompt_email"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:bootstrapSize="xl"
            android:id="@+id/passwordEditText"
            android:hint="@string/prompt_password"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:bootstrapSize="lg"
            android:text="@string/action_sign_in"
            app:bootstrapBrand="secondary"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            android:textAlignment="center"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"
            app:layout_constraintLeft_toLeftOf="@+id/passwordEditText"
            app:layout_constraintRight_toRightOf="@+id/sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
            app:roundedCorners="true"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="0dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>








